# linz-bde-copy

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  README.txt  bde_copy.cfg  bde_copy.cfg.clean  bde_copy.cfg.pgis  bde_copy.cpp  bde_copy_funcs.cpp  bde_copy_funcs.h  bde_copy_gzip.cpp  bde_copy_gzip.h  bde_copy_utils.cpp  bde_copy_utils.h  make_charmap.pl  shell.nix  state_machine.pl  test.bash  testf.csv
.github/workflows/: lint.yml  test.yml
MSWin32/Release/: bde_copy.cfg.control  bde_copy.cfg.detect_utf8
conf/: bde_copy.cfg  bde_copy.cfg.clean  bde_copy.cfg.lolutf8  bde_copy.cfg.mssql  bde_copy.cfg.pgis  bde_copy.cfg.utf8  bde_copy.help
debian/: changelog  control
ms/: bde_copy.vcproj
ms/Release/: bde_copy.cfg
scripts/: make_charmap.pl  state_machine.pl
src/: bde_copy.cpp  bde_copy.h  bde_copy_config.h.in  bde_copy_funcs.cpp  bde_copy_funcs.h  bde_copy_gzip.cpp  bde_copy_gzip.h  bde_copy_utils.cpp  bde_copy_utils.h  main.cpp
src/support/win32/: dirent.h
testdata/: .gitattributes  escape.crs  lolutf.crs  mixutf.crs  par1.crs  parh.crs  parh.crs.hdr  runtests.bash  runtests.bat  runtests.sh  scg.crs  scg1.crs  test1.cfg  test2.cfg  test3.cfg  test4.cfg  test5.cfg  test6.cfg  testutf1.cfg  testutf2.cfg  testutf3.cfg  testutf4.cfg  testutf5.cfg
testdata/repo/level_0_archive/: scg.crs.20100501000000  scg.crs.20100504030201  scg.crs.p0
testdata/validate/: .gitattributes  bogus1.stderr  escape2.stdout  lolutf.out  mixutf2.out  mixutf3.out  mixutf4.out  mixutf5.stdout  par1.out  par1f1.stderr  par1f4.stderr  par1n.stdout  par1o.stdout  par2.out  par3.out  par4.out  scg2.out  scg4.out  scg6.stdout  scgp2.stdout  scgw2.out  scgw3.stdout
unix/: makefile
util/: LandonlineCharSet.csv  bde_copy.cfg.lolutf8  lolutf8.py
vc/: bde_copy.sln
vc/Release/: bde_copy.cfg  bde_copy.cfg.clean  bde_copy.cfg.mssql  bde_copy.cfg.pgis  bde_copy.cfg.utf8
